--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -12,6 +12,8 @@ spring:
   mvc:
     static-path-pattern: /static/**
   http:
+    multipart:
+      enabled: false
     encoding:
       force: true
       charset: UTF-8
