--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -50,3 +50,8 @@ ali:
     sufFileSavePath: .pcm
   tts:
     AppKey: m2mbAr79dyzWl70W
+phone:
+  ownership:
+    url: https://cxyyb.zgpajf.com.cn/tempTest
+    fileDir: E:\\lky\\writeFileTest\\
+    suffix: .xlsx
